force-app/main/default/objects/ScheduledTSDetails__c.object
<CustomObject>
    <description>What: part of Analytics Demo Data tool. DO NOT RENAME.</description>
    <fields>
        <fullName>CurrentBatchProcessId__c</fullName>
        <label>CurrentBatchProcessId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentNodeIndex__c</fullName>
        <label>CurrentNodeIndex</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysToShift__c</fullName>
        <label>DaysToShift</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DetailJson__c</fullName>
        <label>DetailJson</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Errors__c</fullName>
        <label>Errors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobStatus__c</fullName>
        <label>JobStatus</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QueueProcessId__c</fullName>
        <label>QueueProcessId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Started_Date__c</fullName>
        <label>Started Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>ScheduledTSDetails</label>
    <nameField>
        <label>ScheduledTSDetails Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ScheduledTSDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>